--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">APLICATIVO DE NOTÍCIAS INSTITUCIONAIS</string>
+    <string name="app_name">ANI - APLICATIVO DE NOTÍCIAS INSTITUCIONAIS</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">APLICATIVO DE NOTÍCIAS INSTITUCIONAIS</string>
+    <string name="nav_header_title">ANI - APLICATIVO DE NOTÍCIAS INSTITUCIONAIS</string>
     <string name="nav_header_subtitle">app157@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">informações</string>
